# srhlab

./: README.md  README.md.html
bash/: frags  systype.bash
cmake/1/: CMakeLists.txt
cmd/: README.md  admin-launch.cmd  array.cmd  cmdargs.cmd  crlf-vs-lf.cmd  delayed_expansion.cmd  echo-args.cmd  errreport.cmd  exitcode.cmd  indirect-goto.cmd  script-utf8-nobom.cmd  sub-setlocal.cmd  zipdir.cmd
cpp/: .gitignore  CMakeLists.txt  INDEX.md  README.md  array.cpp  constants.cpp  cppnotes.txt  enum-bitfield.cpp  expr-vars.cpp  filesystem.cpp  float-close.cpp  float-epsilon.cpp  float.cpp  floatEpsilon.cpp  floatEpsilonDiffTest.cpp  foo.txt  format.cpp  fpsum.cpp  ignore.cpp  initialization.cpp  istream.cpp  magic-static.cpp  makefile  ostream.cpp  pair.cpp  partvirt.cpp  rgbclamp.cpp  scope-for.cpp  scope-if.cpp  sharedPtr.cpp  std-move-class.cpp  string.cpp  template-values.cpp  tuple.cpp  type-collision.cpp  unordered_set.cpp  variadic.cpp  vector-growth.cpp
cs/: Program.cs  TextHello.csproj  TextHello.sln
cs/Properties/: AssemblyInfo.cs
d3/: d3-bottom-up-failure.html  d3-workbench.html  pathtween.html  phyllotaxis.html  poisson-disc.html  table-lodash.html  table.html
d3/data/: data1.html  data2.html  data3.html
html/: README.md  barchart-pick.html  click-events.html  context-menu.html  hyphenation.html  redirect.html  rightclick-event.html  style-element.html
js/: README.md  arraytest.html  callee.html  cascadeLookup.html  closure-persist-vars.html  fibonacci.html  for-var.html  form0.html  form2.html  format-minmax.js  getattr.html  logDOM.html  new-closure.html  pnoise.html  redirect.html  regexp.html  stochastic-urn.html
markdeep/: apidoc.md.html  dark.md.html  markdeep.md.html
nmake/: envtest.cmd  makefile  x.cmd
nmake/d1/: makefile
nmake/d1/d1a/: makefile
nmake/d1/d1b/: makefile
nmake/d2/: makefile
python/: README.md  cmdargs.py  countdown.py  dictionary.py  environment.py  filemod.py  first.py  frags.py  functions.py  helloworld.py  line-wrap.py  list.py  range.py  regex.py  stdin-out.py  strformat.py  substring.py  syscall.py  triplequote.py  tripletick.py
scala/: .gitignore
scala/example/: .classpath  .project  build.sbt
scala/example/project/: CourseraHttp.scala  GradingFeedback.scala  ProgFunBuild.scala  RecordingLogger.scala  RichJsValue.scala  ScalaTestRunner.scala  Settings.scala  StyleChecker.scala  buildSettings.sbt  scalastyle_config.xml  scalastyle_config_reactive.xml
scala/example/project/project/: buildPlugins.sbt
scala/example/src/main/scala/common/: package.scala
scala/example/src/main/scala/example/: Lists.scala
scala/example/src/test/scala/example/: ListsSuite.scala
scala/hello.0/: build.sbt
scala/helloWorld/src/: Hello.scala  hello_worksheet.sc
svg/: grid.html  inhtml.html  transp-test.html
svg/talk/: inhtml.html
windows/wintitle/: .gitignore  makefile  wintitle.cpp
